checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000026444.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '9e4f5e29', maybe rebased or not pulled?
#35: 
>> Commit 9e4f5e29 (FC Pass Thru support) exported a number of header files

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#40: 
>> /tmp/include/scsi/scsi.h:145: error: expected specifier-qualifier-list

WARNING:TYPO_SPELLING: 'pass-thru' may be misspelled - perhaps 'pass-through'?
#188: FILE: usr/include/scsi/scsi.h:114:
+#define	ATA_16		      0x85	/* 16-byte pass-thru */
        	      		          	           ^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:TYPO_SPELLING: 'pass-thru' may be misspelled - perhaps 'pass-through'?
#189: FILE: usr/include/scsi/scsi.h:115:
+#define	ATA_12		      0xa1	/* 12-byte pass-thru */
        	      		          	           ^^^^^^^^^

WARNING:INLINE: plain inline is preferred over __inline__
#207: FILE: usr/include/scsi/scsi.h:133:
+static __inline__ unsigned

WARNING:INLINE: plain inline is preferred over __inline__
#237: FILE: usr/include/scsi/scsi.h:163:
+static __inline__ int scsi_status_is_good(int status)

ERROR:TRAILING_WHITESPACE: trailing whitespace
#288: FILE: usr/include/scsi/scsi.h:230:
+#define TYPE_MOD            0x07    /* Magneto-optical disk - $

Trailing whitespace should always be removed.
Some editors highlight the trailing whitespace and cause visual
distractions when editing files.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

WARNING:INLINE: plain inline is preferred over __inline__
#366: FILE: usr/include/scsi/scsi.h:288:
+static __inline__ int scsi_is_wlun(unsigned int lun)

WARNING:BLOCK_COMMENT_STYLE: Block comments use a trailing */ on a separate line
#430: FILE: usr/include/scsi/scsi.h:352:
+				 * without decrementing the retry count	   */

The comment style is incorrect.  The preferred style for multi-
line comments is::

  /*
  * This is the preferred style
  * for multi line comments.
  */

The networking comment style is a bit different, with the first line
not empty like the former::

  /* This is the preferred comment style
  * for files in net/ and drivers/net/
  */

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#commenting

WARNING:BLOCK_COMMENT_STYLE: Block comments use a trailing */ on a separate line
#434: FILE: usr/include/scsi/scsi.h:356:
+				      * retry or fail IO */

WARNING:TRAILING_SEMICOLON: macros should not use a trailing semicolon
#490: FILE: usr/include/scsi/scsi.h:412:
+#define sense_valid(sense)  ((sense) & 0x80);

Macro definition should not end with a semicolon. The macro
invocation style should be consistent with function calls.
This can prevent any unexpected code paths::

  #define MAC do_something;

If this macro is used within a if else statement, like::

  if (some_condition)
          MAC;

  else
          do_something;

Then there would be a compilation error, because when the macro is
expanded there are two trailing semicolons, so the else branch gets
orphaned.

See: https://lore.kernel.org/lkml/1399671106.2912.21.camel@joe-AO725/

WARNING:BLOCK_COMMENT_STYLE: Block comments should align the * on each line
#494: FILE: usr/include/scsi/scsi.h:416:
+ * default timeouts
+*/

ERROR:SPACING: space prohibited before that close parenthesis ')'
#499: FILE: usr/include/scsi/scsi.h:421:
+#define READ_DEFECT_DATA_TIMEOUT	(60 * HZ )

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

CHECK:LINE_SPACING: Please don't use multiple blank lines
#501: FILE: usr/include/scsi/scsi.h:423:
+
+

Vertical space is wasted given the limited number of lines an
editor window can display when multiple blank lines are used.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

WARNING:INLINE: plain inline is preferred over __inline__
#558: FILE: usr/include/scsi/scsi.h:473:
+static __inline__ __u32 scsi_to_u32(__u8 *ptr)

CHECK:SPACING: spaces preferred around that '<<' (ctx:VxV)
#560: FILE: usr/include/scsi/scsi.h:475:
+	return (ptr[0]<<24) + (ptr[1]<<16) + (ptr[2]<<8) + ptr[3];
 	              ^

CHECK:SPACING: spaces preferred around that '<<' (ctx:VxV)
#560: FILE: usr/include/scsi/scsi.h:475:
+	return (ptr[0]<<24) + (ptr[1]<<16) + (ptr[2]<<8) + ptr[3];
 	                             ^

CHECK:SPACING: spaces preferred around that '<<' (ctx:VxV)
#560: FILE: usr/include/scsi/scsi.h:475:
+	return (ptr[0]<<24) + (ptr[1]<<16) + (ptr[2]<<8) + ptr[3];
 	                                            ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000026444.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 2 errors, 12 warnings, 4 checks, 470 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

NOTE: Whitespace errors detected.
      You may wish to use scripts/cleanpatch or scripts/cleanfile

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000026444.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
